--- a/ap-tables.tex
+++ b/ap-tables.tex
@@ -628,7 +628,7 @@ Here is a table that is too long to fit on one page.
 
 
 \begin{VerbatimOut}{z.out}
-\begin{table}[h]%
+\begin{table}[ht]%
   \label{ta:first-tally-table}
   \caption
   [%
@@ -660,7 +660,7 @@ Here is a table that is too long to fit on one page.
 
 
 \begin{VerbatimOut}{z.out}
-\begin{table}[h]
+\begin{table}[ht]
   \caption{%
     Second tally table.
     Don't use this method.
